# MyPage

./: Cargo.toml  Trunk.toml  index.html  mypage-62fc940236ca811.js  mypage-f079591774791092.js  rust-toolchain  sw.js
.github/workflows/: pages.yml
src/: about_me.rs  app.rs  constants.rs  education.rs  experience.rs  info.rs  lib.rs  main.rs  project.rs
